# unifr_pattern_recognition

./: .gitignore  KMEANS.md  KNN.md  README.md  makefile  pyproject.toml
src/: clustering_quality.py  distance.py
src/classification/: svm.py
src/clustering/: kmeans.py
src/clustering/quality/: c_index.py  clustering_quality.py  davis_bouldin_index.py  dunn_index.py
src/exercise_01/: main.py
src/k_means/: main.py
src/kmeans/: main.py
src/knn/: main.py
tests/: test_kmeans.py
